Bug 1746715 - Add the GDK wayland symbols to the mozwayland library. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D197351